--- a/src/main/resources/fxml/addnewcustomer.fxml
+++ b/src/main/resources/fxml/addnewcustomer.fxml
@@ -26,7 +26,7 @@
    <center>
       <VBox prefHeight="471.0" prefWidth="554.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="500.0">
+            <HBox alignment="CENTER" prefHeight="73.0" prefWidth="550.0">
                <children>
                   <Region prefHeight="46.0" prefWidth="58.0" />
                   <Label text="Add New Customer" textFill="#13336e">
@@ -46,6 +46,9 @@
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
+                        <RowConstraints />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -53,36 +56,37 @@
                         <RowConstraints maxHeight="31.600012207031256" minHeight="10.0" prefHeight="28.400000000000006" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label prefHeight="42.0" prefWidth="281.0" text="First Name" textFill="#13336e" underline="true">
+                        <Label prefHeight="42.0" prefWidth="281.0" text="First Name" textFill="#13336e" underline="true" GridPane.rowIndex="3">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="349.0" text="Last Name" textFill="#13336e" underline="true" GridPane.rowIndex="1">
+                        <Label layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="349.0" text="Last Name" textFill="#13336e" underline="true" GridPane.rowIndex="4">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="40.0" prefHeight="42.0" prefWidth="312.0" text="E-mail" textFill="#13336e" underline="true" GridPane.rowIndex="2">
+                        <Label layoutX="10.0" layoutY="40.0" prefHeight="42.0" prefWidth="312.0" text="E-mail" textFill="#13336e" underline="true" GridPane.rowIndex="5">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="66.0" prefHeight="42.0" prefWidth="312.0" text="Phone Number" textFill="#13336e" underline="true" GridPane.rowIndex="3">
+                        <Label layoutX="10.0" layoutY="66.0" prefHeight="42.0" prefWidth="312.0" text="Phone Number" textFill="#13336e" underline="true" GridPane.rowIndex="6">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="94.0" prefHeight="42.0" prefWidth="312.0" text="Expenditure" textFill="#13336e" underline="true" GridPane.rowIndex="4">
+                        <Label layoutX="10.0" layoutY="94.0" prefHeight="42.0" prefWidth="312.0" text="Expenditure" textFill="#13336e" underline="true" GridPane.rowIndex="7">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="fname" style="-fx-background-radius: 10;" GridPane.columnIndex="1" />
-                        <TextField fx:id="lname" layoutX="223.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="email1" layoutX="223.0" layoutY="32.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField fx:id="phonenumber" layoutX="223.0" layoutY="64.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="expenditure" layoutX="223.0" layoutY="95.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="fname" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="lname" layoutX="223.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="email1" layoutX="223.0" layoutY="32.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField fx:id="phonenumber" layoutX="223.0" layoutY="64.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <TextField fx:id="expenditure" layoutX="223.0" layoutY="95.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <Label fx:id="customerlabel" prefHeight="18.0" prefWidth="150.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                   <Region prefHeight="235.0" prefWidth="96.0" HBox.hgrow="ALWAYS" />
@@ -108,7 +112,4 @@
          </children>
       </VBox>
    </center>
-   <top>
-      <Region prefHeight="116.0" prefWidth="650.0" BorderPane.alignment="CENTER" />
-   </top>
 </BorderPane>
