--- a/src/main/resources/fxml/profile1.fxml
+++ b/src/main/resources/fxml/profile1.fxml
@@ -31,15 +31,32 @@
                   </Button>
                </children>
             </HBox>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="31.0" prefWidth="133.0" text=" PROFILE">
+            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="61.0" prefWidth="134.0" text=" PROFILE">
                <VBox.margin>
                   <Insets bottom="5.0" />
-               </VBox.margin></Button>
+               </VBox.margin>
+               <graphic>
+                  <ImageView fitHeight="33.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/p1.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets right="24.0" />
+               </padding></Button>
             <Button alignment="CENTER" layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#editprofilepage" prefHeight="32.0" prefWidth="134.0" text="EDIT PROFILE">
                <VBox.margin>
                   <Insets bottom="5.0" />
-               </VBox.margin></Button>
-            <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" onMouseClicked="#changepasspage" prefHeight="33.0" prefWidth="134.0" text="CHANGE PASSWORD" />
+               </VBox.margin>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/p1.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" onMouseClicked="#changepasspage" prefHeight="62.0" prefWidth="134.0" text="CHANGE PASSWORD" />
             <Region prefHeight="329.0" prefWidth="155.0" VBox.vgrow="ALWAYS" />
             <Button fx:id="logoutfromprofile" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_profile" prefHeight="75.0" prefWidth="77.0">
                <graphic>
