--- a/src/main/resources/fxml/PROFILE.fxml
+++ b/src/main/resources/fxml/PROFILE.fxml
@@ -20,18 +20,52 @@
          <children>
             <HBox prefHeight="72.0" prefWidth="156.0">
                <children>
-                  <Button fx:id="byteme1" mnemonicParsing="false" onMouseClicked="#opendashboard_fromprofile" prefHeight="78.0" prefWidth="155.0" text="BYTE_ME">
+                  <Button fx:id="byteme1" mnemonicParsing="false" onMouseClicked="#opendashboard_fromprofile" prefHeight="78.0" prefWidth="155.0">
                      <font>
                         <Font size="26.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="53.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/DESIGN.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="PROFILE" />
-            <Button layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#editprofilepage" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE" />
+            <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="PROFILE">
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/p1.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets right="30.0" />
+               </padding></Button>
+            <Button layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#editprofilepage" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE">
+               <graphic>
+                  <ImageView fitHeight="43.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/p1.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
             <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" onMouseClicked="#changepasspage" prefHeight="49.0" prefWidth="190.0" text="CHANGE PASSWORD" />
             <Region prefHeight="329.0" prefWidth="155.0" VBox.vgrow="ALWAYS" />
-            <Button fx:id="logoutfromprofile" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_profile" prefHeight="49.0" prefWidth="190.0" text="LOGOUT" />
+            <Button fx:id="logoutfromprofile" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_profile" prefHeight="56.0" prefWidth="155.0">
+               <graphic>
+                  <ImageView fitHeight="46.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/logout_icon-icons.com_51025.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets right="70.0" />
+               </padding></Button>
          </children>
       </VBox>
    </left>
@@ -45,8 +79,11 @@
                      <children>
                         <ImageView fitHeight="144.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../Downloads/mm.png" />
-                           </image></ImageView>
+                              <Image url="@../img/mm.png" />
+                           </image>
+                           <VBox.margin>
+                              <Insets left="30.0" />
+                           </VBox.margin></ImageView>
                         <Label alignment="TOP_CENTER" layoutX="10.0" layoutY="154.0" prefHeight="31.0" prefWidth="174.0" text="STATUS" />
                      </children>
                   </VBox>
