--- a/src/main/resources/fxml/PROFILE PASSWORD.fxml
+++ b/src/main/resources/fxml/PROFILE PASSWORD.fxml
@@ -21,18 +21,52 @@
          <children>
             <HBox prefHeight="72.0" prefWidth="156.0">
                <children>
-                  <Button fx:id="byteme2" mnemonicParsing="false" onMouseClicked="#opendash_frompass" prefHeight="99.0" prefWidth="190.0" text="BYTE_ME">
+                  <Button fx:id="byteme2" mnemonicParsing="false" onMouseClicked="#opendash_frompass" prefHeight="99.0" prefWidth="190.0">
                      <font>
                         <Font size="28.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="56.0" fitWidth="74.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/DESIGN.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <padding>
+                        <Insets right="30.0" />
+                     </padding>
                   </Button>
                </children>
             </HBox>
-            <Button fx:id="openprofrompass" mnemonicParsing="false" onMouseClicked="#open_profile_frompass" prefHeight="49.0" prefWidth="190.0" text="PROFILE" VBox.vgrow="ALWAYS" />
-            <Button fx:id="opendit_pro" layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#openeditpro_frompass" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE" VBox.vgrow="ALWAYS" />
+            <Button fx:id="openprofrompass" mnemonicParsing="false" onMouseClicked="#open_profile_frompass" prefHeight="49.0" prefWidth="190.0" text="PROFILE" VBox.vgrow="ALWAYS">
+               <graphic>
+                  <ImageView fitHeight="41.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/p1.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets right="19.0" />
+               </padding></Button>
+            <Button fx:id="opendit_pro" layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#openeditpro_frompass" prefHeight="49.0" prefWidth="190.0" text="EDIT PROFILE" VBox.vgrow="ALWAYS">
+               <graphic>
+                  <ImageView fitHeight="43.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/p1.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
             <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="190.0" text="CHANGE PASSWORD" VBox.vgrow="ALWAYS" />
             <Region prefHeight="329.0" prefWidth="155.0" VBox.vgrow="ALWAYS" />
-            <Button fx:id="logoutfrompass" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_pass" prefHeight="49.0" prefWidth="190.0" text="LOGOUT" VBox.vgrow="ALWAYS" />
+            <Button fx:id="logoutfrompass" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_pass" prefHeight="49.0" prefWidth="190.0" text="LOGOUT" VBox.vgrow="ALWAYS">
+               <graphic>
+                  <ImageView fitHeight="45.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/logout_icon-icons.com_51025.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
          </children>
       </VBox>
    </left>
@@ -45,12 +79,12 @@
                   <VBox prefHeight="233.0" prefWidth="174.0">
                      <children>
                         <ImageView fitHeight="144.0" fitWidth="188.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../Downloads/mm.png" />
-                           </image>
                            <VBox.margin>
                               <Insets left="20.0" />
-                           </VBox.margin></ImageView>
+                           </VBox.margin>
+                           <image>
+                              <Image url="@../img/mm.png" />
+                           </image></ImageView>
                         <Label alignment="TOP_CENTER" layoutX="10.0" layoutY="154.0" prefHeight="36.0" prefWidth="174.0" text="STATUS">
                            <padding>
                               <Insets right="20.0" />
