--- a/src/main/resources/fxml/dashboard.fxml
+++ b/src/main/resources/fxml/dashboard.fxml
@@ -13,9 +13,9 @@
    <center>
       <VBox alignment="CENTER" prefHeight="400.0" prefWidth="415.0" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="50.0" maxWidth="600.0" prefHeight="42.0" prefWidth="280.0" text="Alpha Super Mart" textFill="#1f068c" VBox.vgrow="ALWAYS">
+            <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="50.0" maxWidth="600.0" prefHeight="42.0" prefWidth="280.0" text="My Market Management" textFill="#1f068c" VBox.vgrow="ALWAYS">
                <font>
-                  <Font size="54.0" />
+                  <Font size="48.0" />
                </font>
             </Label>
             <Region prefHeight="30.0" prefWidth="386.0" />
