--- a/src/main/resources/fxml/PROFILE.fxml
+++ b/src/main/resources/fxml/PROFILE.fxml
@@ -55,17 +55,14 @@
                </graphic></Button>
             <Button layoutX="10.0" layoutY="132.0" mnemonicParsing="false" onMouseClicked="#changepasspage" prefHeight="49.0" prefWidth="190.0" text="CHANGE PASSWORD" />
             <Region prefHeight="329.0" prefWidth="155.0" VBox.vgrow="ALWAYS" />
-            <Button fx:id="logoutfromprofile" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_profile" prefHeight="56.0" prefWidth="155.0">
+            <Button fx:id="logoutfromprofile" layoutX="10.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#logout_from_profile" prefHeight="56.0" prefWidth="155.0" text="LOGOUT ">
                <graphic>
                   <ImageView fitHeight="46.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../img/logout_icon-icons.com_51025.png" />
                      </image>
                   </ImageView>
-               </graphic>
-               <padding>
-                  <Insets right="70.0" />
-               </padding></Button>
+               </graphic></Button>
          </children>
       </VBox>
    </left>
