--- a/src/main/resources/fxml/addnewcustomer.fxml
+++ b/src/main/resources/fxml/addnewcustomer.fxml
@@ -51,7 +51,6 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="31.59998168945313" minHeight="10.0" prefHeight="28.400000000000006" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="31.600012207031256" minHeight="10.0" prefHeight="28.400000000000006" vgrow="SOMETIMES" />
                      </rowConstraints>
@@ -66,27 +65,27 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="40.0" prefHeight="42.0" prefWidth="312.0" text="E-mail" textFill="#13336e" underline="true" GridPane.rowIndex="5">
+                        <Label layoutX="10.0" layoutY="40.0" prefHeight="42.0" prefWidth="312.0" text="Customer ID" textFill="#13336e" underline="true" GridPane.rowIndex="2">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="66.0" prefHeight="42.0" prefWidth="312.0" text="Phone Number" textFill="#13336e" underline="true" GridPane.rowIndex="6">
+                        <Label layoutX="10.0" layoutY="66.0" prefHeight="42.0" prefWidth="312.0" text="Phone Number" textFill="#13336e" underline="true" GridPane.rowIndex="5">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="94.0" prefHeight="42.0" prefWidth="312.0" text="Expenditure" textFill="#13336e" underline="true" GridPane.rowIndex="7">
+                        <Label layoutX="10.0" layoutY="94.0" prefHeight="42.0" prefWidth="312.0" text="Expenditure" textFill="#13336e" underline="true" GridPane.rowIndex="6">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="fname" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="customerid" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <TextField fx:id="lname" layoutX="223.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField fx:id="email1" layoutX="223.0" layoutY="32.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <TextField fx:id="phonenumber" layoutX="223.0" layoutY="64.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <TextField fx:id="expenditure" layoutX="223.0" layoutY="95.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                        <Label fx:id="customerlabel" prefHeight="18.0" prefWidth="150.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="phonenumber" layoutX="223.0" layoutY="64.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField fx:id="expenditure" layoutX="223.0" layoutY="95.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Label fx:id="customerlabel" prefHeight="18.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="fname" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
                   <Region prefHeight="235.0" prefWidth="96.0" HBox.hgrow="ALWAYS" />
@@ -104,7 +103,7 @@
                         </Region>
                         <Button fx:id="addconsumerbutton" mnemonicParsing="false" onMouseClicked="#addconsumer" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Add" textFill="WHITE" />
                         <Region layoutX="10.0" layoutY="10.0" prefHeight="56.0" prefWidth="49.0" />
-                        <Button fx:id="cancelbutton" layoutX="102.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#canceltodashboard" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Cancel" textFill="WHITE" />
+                        <Button fx:id="cancelbutton" layoutX="102.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#canceltocustomer" prefHeight="36.0" prefWidth="94.0" style="-fx-background-color: #13336e; -fx-background-radius: 10;" text="Cancel" textFill="WHITE" />
                      </children>
                   </HBox>
                </children>
